// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render MovieCard component render grid layout correctly 1`] = `
<MovieCardGrid
  data={
    Object {
      "genres": Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ],
      "handleModalToggle": [Function],
      "handleShowInfo": [Function],
      "isInfoShown": false,
      "isModalOpened": false,
      "movie": Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      },
      "movieTrailerKey": "test",
      "updateMovieTrailerKey": [MockFunction],
    }
  }
/>
`;

exports[`render MovieCard component render handleShowInfo click correctly 1`] = `
<MovieCardTable
  data={
    Object {
      "genres": Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ],
      "handleModalToggle": [Function],
      "handleShowInfo": [Function],
      "isInfoShown": true,
      "isModalOpened": false,
      "movie": Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      },
      "movieTrailerKey": "test",
      "updateMovieTrailerKey": [MockFunction],
    }
  }
/>
`;

exports[`render MovieCard component render table layout correctly 1`] = `
<MovieCardTable
  data={
    Object {
      "genres": Array [
        Object {
          "id": 1,
          "name": "Action",
        },
        Object {
          "id": 2,
          "name": "SciFi",
        },
      ],
      "handleModalToggle": [Function],
      "handleShowInfo": [Function],
      "isInfoShown": false,
      "isModalOpened": false,
      "movie": Object {
        "adult": false,
        "backdropPath": "/test.jpg",
        "genreIds": Array [
          1,
          2,
        ],
        "id": 1,
        "originalLanguage": "en",
        "originalTitle": "test",
        "overview": "test",
        "popularity": 1,
        "posterPath": "/test.jpg",
        "releaseDate": "1",
        "title": "test",
        "video": false,
        "voteAverage": 1,
        "voteCount": 1,
      },
      "movieTrailerKey": "test",
      "updateMovieTrailerKey": [MockFunction],
    }
  }
/>
`;
